[package]
name = "input_mode-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.4.0"
gpui-component-assets = "0.5.0"
image = "0.25.9"
rand = "0.9.2"
raw-window-handle = "0.6.2"
tray-icon = "0.21.3"
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_UI_Controls",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
] }
anyhow = "1.0.102"
