[package]
name = "input_mode-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
rand = "0.9.2"
raw-window-handle = "0.6.2"
tray-icon = "0.21.3"
winit = "0.30.13"
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_UI_Controls",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
] }
anyhow = "1.0.102"
windows-core = "0.62.2"

[profile.dev]
debug = 1

[profile.release]
debug = 0
