[package]
name = "input_mode-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.9"
rand = "0.9.2"
raw-window-handle = "0.6.2"
tray-icon = "0.21.3"
winit = "0.30.13"
windows = { version = "0.62.2", features = [
    "Win32",
    "Win32_UI_Controls",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_HiDpi",
] }
anyhow = "1.0.102"
windows-core = "0.62.2"
serde = "1.0.228"
toml = "1.1.2"
directories = "6.0.0"
notify = "8.2.0"
gpui = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
windows-numerics = "0.3.1"
parking_lot = "0.12.5"
strum = "0.28.0"
strum_macros = "0.28.0"
palette = "0.7.6"

[profile.dev]
debug = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
panic = "abort"
